[package]
name = "xp-valkey-stream"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32.1", features = ["tokio-comp"] }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
